--- a/cmake/dependencies/CMakeLists.txt.in
+++ b/cmake/dependencies/CMakeLists.txt.in
@@ -5,11 +5,11 @@ project(@GIT_DEP_NAME@ NONE)
 include(ExternalProject)
 
 ExternalProject_Add(${PROJECT_NAME}_project
-  TMP_DIR "@CMAKE_BINARY_DIR@/${PROJECT_NAME}/tmp"
-  STAMP_DIR "@CMAKE_BINARY_DIR@/${PROJECT_NAME}/stamp"
-  DOWNLOAD_DIR "@CMAKE_BINARY_DIR@/${PROJECT_NAME}/download"
-  SOURCE_DIR "@CMAKE_BINARY_DIR@/${PROJECT_NAME}/source"
-  BINARY_DIR "@CMAKE_BINARY_DIR@/${PROJECT_NAME}/build"
+  TMP_DIR "@CMAKE_CURRENT_BINARY_DIR@/${PROJECT_NAME}/tmp"
+  STAMP_DIR "@CMAKE_CURRENT_BINARY_DIR@/${PROJECT_NAME}/stamp"
+  DOWNLOAD_DIR "@CMAKE_CURRENT_BINARY_DIR@/${PROJECT_NAME}/download"
+  SOURCE_DIR "@CMAKE_CURRENT_BINARY_DIR@/${PROJECT_NAME}/source"
+  BINARY_DIR "@CMAKE_CURRENT_BINARY_DIR@/${PROJECT_NAME}/build"
 
   GIT_REPOSITORY "@GIT_DEP_REPOSITORY@"
   GIT_TAG "@GIT_DEP_TAG@"
@@ -23,8 +23,8 @@ ExternalProject_Add(${PROJECT_NAME}_project
 
   # CONFIGURE_COMMAND ""
   CMAKE_ARGS
-    -DCMAKE_PREFIX_PATH=@CMAKE_BINARY_DIR@/dependencies/install
-    -DCMAKE_INSTALL_PREFIX=@CMAKE_BINARY_DIR@/dependencies/install
+  -DCMAKE_PREFIX_PATH=@CMAKE_CURRENT_BINARY_DIR@/install
+  -DCMAKE_INSTALL_PREFIX=@CMAKE_CURRENT_BINARY_DIR@/install
     -DCMAKE_BUILD_TYPE=@CMAKE_BUILD_TYPE@
     -DBUILD_SHARED_LIBS=OFF
     -DBUILD_TESTING=OFF
