--- a/cmake/dependencies/SWIG.CMakeLists.txt.in
+++ b/cmake/dependencies/SWIG.CMakeLists.txt.in
@@ -5,10 +5,10 @@ project(SWIG NONE)
 include(ExternalProject)
 
 ExternalProject_Add(SWIG_project
-  TMP_DIR "@CMAKE_BINARY_DIR@/${PROJECT_NAME}/tmp"
-  STAMP_DIR "@CMAKE_BINARY_DIR@/${PROJECT_NAME}/stamp"
-  DOWNLOAD_DIR "@CMAKE_BINARY_DIR@/${PROJECT_NAME}/download"
-  SOURCE_DIR "@CMAKE_BINARY_DIR@/${PROJECT_NAME}/source"
+  TMP_DIR "@CMAKE_CURRENT_BINARY_DIR@/${PROJECT_NAME}/tmp"
+  STAMP_DIR "@CMAKE_CURRENT_BINARY_DIR@/${PROJECT_NAME}/stamp"
+  DOWNLOAD_DIR "@CMAKE_CURRENT_BINARY_DIR@/${PROJECT_NAME}/download"
+  SOURCE_DIR "@CMAKE_CURRENT_BINARY_DIR@/${PROJECT_NAME}/source"
   BUILD_IN_SOURCE 1
 
   URL "https://superb-dca2.dl.sourceforge.net/project/swig/swigwin/swigwin-3.0.12/swigwin-3.0.12.zip"
